@startuml

title __MANAGERS's Class Diagram__\n

  namespace inf112.skeleton.app {
    namespace ui.chat {
      namespace managers {
        class inf112.skeleton.app.ui.chat.managers.ChatClient {
            + ChatClient()
            + sendMessage()
        }
      }
    }
  }
  

  namespace inf112.skeleton.app {
    namespace ui.chat {
      namespace managers {
        class inf112.skeleton.app.ui.chat.managers.ChatManager {
            + ChatManager()
            + initializeMessageList()
            + sendMessage()
            - getNextId()
        }
      }
    }
  }
  

  namespace inf112.skeleton.app {
    namespace ui.chat {
      namespace managers {
        abstract class inf112.skeleton.app.ui.chat.managers.Chatter {
            + Chatter()
            + getChatAsTable()
            + getChatterData()
            + initializeChat()
            + initializeChat()
            {abstract} + sendMessage()
            + setChatDisplay()
            + setChatScaling()
            + setChatterID()
            + setName()
            + updateChat()
        }
      }
    }
  }
  

  namespace inf112.skeleton.app {
    namespace ui.chat {
      namespace managers {
        interface inf112.skeleton.app.ui.chat.managers.IChatter {
            {abstract} + sendMessage()
        }
      }
    }
  }
  

  inf112.skeleton.app.ui.chat.managers.ChatClient .up.|> inf112.skeleton.app.ui.chat.managers.IChatter
  inf112.skeleton.app.ui.chat.managers.ChatClient -up-|> inf112.skeleton.app.ui.chat.managers.Chatter
  inf112.skeleton.app.ui.chat.managers.ChatClient o-- inf112.skeleton.app.network.NetworkClient : client
  inf112.skeleton.app.ui.chat.managers.ChatManager .up.|> inf112.skeleton.app.ui.chat.managers.IChatter
  inf112.skeleton.app.ui.chat.managers.ChatManager -up-|> inf112.skeleton.app.ui.chat.managers.Chatter
  inf112.skeleton.app.ui.chat.managers.ChatManager o-- inf112.skeleton.app.network.NetworkHost : host
  inf112.skeleton.app.ui.chat.managers.Chatter o-- inf112.skeleton.app.ui.chat.backend.ChatterData : cData
  inf112.skeleton.app.ui.chat.managers.Chatter o-- inf112.skeleton.app.ui.chat.display.Chat : chat


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
